--- a/web_chatapp/package.json
+++ b/web_chatapp/package.json
@@ -46,6 +46,8 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.16",
+    "i18next": "^25.8.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "input-otp": "^1.4.2",
     "laravel-echo": "^2.2.0",
     "lucide-react": "^0.542.0",
@@ -55,6 +57,7 @@
     "react-day-picker": "^9.9.0",
     "react-dom": "^19.1.1",
     "react-hook-form": "^7.62.0",
+    "react-i18next": "^16.5.4",
     "react-redux": "^9.2.0",
     "react-resizable-panels": "^3.0.5",
     "react-router-dom": "^7.8.2",
